--- a/src/components/_card.html
+++ b/src/components/_card.html
@@ -346,7 +346,7 @@
                 </div>
             </div>
         </div>
-        <div class="card__description">
+        <div class="card__description mt24">
             <div class="card__description-left">
                 <ul class="card__description-tabs">
                     <li class="card__description-tabs-item active" data-tab="1">Описание</li>
