--- a/src/components/_products.html
+++ b/src/components/_products.html
@@ -59,7 +59,10 @@
 
                         <div class="recommendations__card-group">
                             <button class="recommendations__card-group-button --primary">
-                                <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
+                                <span>Оптовая цена &nbsp;</span>
+                                <p class="cr">45.90₽</p>
+                                <p>50₽</p>
+                                <span>/от 100 тыс.</span>
                             </button>
 
                             <button class="recommendations__card-group-button --secondary">
@@ -162,7 +165,10 @@
 
                         <div class="recommendations__card-group">
                             <button class="recommendations__card-group-button --primary">
-                                <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
+                                <span>Оптовая цена &nbsp;</span>
+                                <p class="cr">45.90₽</p>
+                                <p>50₽</p>
+                                <span>/от 100 тыс.</span>
                             </button>
 
                             <button class="recommendations__card-group-button --secondary">
@@ -265,7 +271,10 @@
 
                         <div class="recommendations__card-group">
                             <button class="recommendations__card-group-button --primary">
-                                <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
+                                <span>Оптовая цена &nbsp;</span>
+                                <p class="cr">45.90₽</p>
+                                <p>50₽</p>
+                                <span>/от 100 тыс.</span>
                             </button>
 
                             <button class="recommendations__card-group-button --secondary">
@@ -368,7 +377,10 @@
 
                         <div class="recommendations__card-group">
                             <button class="recommendations__card-group-button --primary">
-                                <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
+                                <span>Оптовая цена &nbsp;</span>
+                                <p class="cr">45.90₽</p>
+                                <p>50₽</p>
+                                <span>/от 100 тыс.</span>
                             </button>
 
                             <button class="recommendations__card-group-button --secondary">
