--- a/src/scss/sections/_account-orders.scss
+++ b/src/scss/sections/_account-orders.scss
@@ -354,6 +354,10 @@
 
     &__group-subtitle {
         color: $grey-text;
+
+        @media (max-width: 48em) {
+            font-size: 3rem;
+        }
     }
 
     &__text {
@@ -458,6 +462,8 @@
         }
 
         @media (max-width: 48em) {
+            font-size: 3.6rem;
+            font-weight: 500;
             max-width: none;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -480,6 +486,16 @@
 
     &__group-subtitle {
         color: $grey-text;
+
+        @media (max-width: 48em) {
+            font-size: 3rem;
+        }
+    }
+
+    &__group-txt {
+        @media (max-width: 48em) {
+            font-size: 3rem;
+        }
     }
 }
 
@@ -510,6 +526,16 @@
 
     &__group-subtitle {
         color: $grey-text;
+
+        @media (max-width: 48em) {
+            font-size: 3rem;
+        }
+    }
+
+    &__group-txt {
+        @media (max-width: 48em) {
+            font-size: 3rem;
+        }
     }
 
     &__content {
@@ -532,6 +558,7 @@
         @media (max-width: 48em) {
             margin-bottom: 3.2rem;
             font-weight: 400;
+            font-size: 3.6rem;
         }
     }
 
@@ -656,6 +683,7 @@
         @media (max-width: 48em) {
             margin-bottom: 4.8rem;
             max-width: 55.2rem;
+            font-size: 3rem;
         }
     }
 }
