--- a/src/scss/sections/_account-subscription.scss
+++ b/src/scss/sections/_account-subscription.scss
@@ -29,6 +29,9 @@
         @media (min-width: 48em) {
             max-width: 39.4rem;
         }
+        @media (max-width: 48em) {
+            font-size: 3rem;
+        }
     }
 }
 
@@ -105,6 +108,7 @@
 
         @media (max-width: 48em) {
             font-weight: 500;
+            font-size: 3.6rem;
         }
     }
 
@@ -158,6 +162,9 @@
     &__text {
         @media (min-width: 48em) {
             max-width: 39.4rem;
+        }
+        @media (max-width: 48em) {
+            font-size: 3rem;
         }
     }
 
