--- a/src/ui/styles/_sticky-menu.scss
+++ b/src/ui/styles/_sticky-menu.scss
@@ -51,6 +51,7 @@
                     font-size: 3.6rem;
                     line-height: 120%;
                     text-align: right;
+                    white-space: nowrap;
                 }
             }
         }
@@ -65,7 +66,7 @@
                 &-item {
                     display: flex;
                     flex-direction: column;
-                    gap: .8rem;
+                    gap: 0.8rem;
                     white-space: nowrap;
                     width: fit-content;
                     align-items: center;
