--- a/src/scss/sections/_checkout.scss
+++ b/src/scss/sections/_checkout.scss
@@ -455,6 +455,7 @@
 
         @media (max-width: 48em) {
             margin-bottom: 4rem;
+            height: 9rem;
             column-gap: 1.6rem;
             width: 105%;
             overflow-x: scroll;
