--- a/src/scss/sections/_account-myprofile.scss
+++ b/src/scss/sections/_account-myprofile.scss
@@ -280,6 +280,14 @@
         @media (max-width: 48em) {
             font-size: 3rem;
             font-weight: 500;
+
+            &::after {
+                right: -1rem;
+                top: 0.2rem;
+
+                width: 3rem;
+                height: 3rem;
+            }
         }
     }
 
