--- a/src/components/_catalog.html
+++ b/src/components/_catalog.html
@@ -6109,16 +6109,10 @@
 
                     <div class="catalog__filters-slide-fields">
                         <label for="from">
-                            <input
-                                placeholder="от 20 000 ₽"
-                                min="2000"
-                                max="820000"
-                                type="number"
-                                id="from"
-                            />
+                            <input data-from-min="20000" data-start-number="20000"  placeholder="от 20 000 ₽" type="text" id="from" />
                         </label>
                         <label for="to">
-                            <input placeholder="до 820 000 ₽" min="2000" max="820000" type="number" id="to" />
+                            <input data-to-max="820000" data-end-number="820000"   placeholder="до 820 000 ₽" type="text" id="to" />
                         </label>
                     </div>
 
