--- a/src/components/_catalog.html
+++ b/src/components/_catalog.html
@@ -9307,15 +9307,18 @@
                             <a href="#"> 3 </a>
                         </li>
 
-                        <li class="pagination__item">
-                            <a href="#"> ... </a>
+                        <li class="pagination__item pagination__dots">
+                            <a type="button"> ... </a>
+                            
                         </li>
 
                         <li class="pagination__item">
                             <a href="#"> 28 </a>
                         </li>
                     </ul>
-
+                    <label class="pagination__input">
+                        <input type="number">
+                    </label>
                     <a href="" class="pagination__button --active">
                         <img src="./assets/images/icons/arrow-right.svg" alt="" />
                     </a>
