--- a/src/scss/dev/markusDM.scss
+++ b/src/scss/dev/markusDM.scss
@@ -16,3 +16,5 @@
 @import '../sections/modal-profile';
 @import '../sections/modal-global';
 @import '../sections/card-modal';
+@import '../sections/not-found';
+
