--- a/src/components/_account-favorite.html
+++ b/src/components/_account-favorite.html
@@ -365,7 +365,8 @@
                                         </button>
                                     </div>
 
-                                    <button class="recommendations__card-button btn__card">
+                                    <button type="button"
+class="recommendations__card-button btn__card">
                                         <span> В корзину </span>
 
                                         <svg
@@ -485,7 +486,8 @@
                                         </button>
                                     </div>
 
-                                    <button class="recommendations__card-button btn__card">
+                                    <button type="button"
+class="recommendations__card-button btn__card">
                                         <span> В корзину </span>
 
                                         <svg
@@ -605,7 +607,8 @@
                                         </button>
                                     </div>
 
-                                    <button class="recommendations__card-button btn__card">
+                                    <button type="button"
+class="recommendations__card-button btn__card">
                                         <span> В корзину </span>
 
                                         <svg
@@ -725,7 +728,8 @@
                                         </button>
                                     </div>
 
-                                    <button class="recommendations__card-button btn__card">
+                                    <button type="button"
+class="recommendations__card-button btn__card">
                                         <span> В корзину </span>
 
                                         <svg
