--- a/src/components/_card.html
+++ b/src/components/_card.html
@@ -29,13 +29,12 @@
                                 </div>
                                 
                                 <button class="card__swiper-slide-like">
-                                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                                        xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <path id="Vector"
-                                            d="M12 21.6499C11.6895 21.6499 11.3906 21.6099 11.1406 21.52C7.32031 20.21 1.25 15.5601 1.25 8.68994C1.25 5.18994 4.08008 2.3501 7.56055 2.3501C9.25 2.3501 10.8301 3.01025 12 4.18994C13.1699 3.01025 14.75 2.3501 16.4395 2.3501C19.9199 2.3501 22.75 5.2002 22.75 8.68994C22.75 15.5703 16.6797 20.21 12.8594 21.52C12.6094 21.6099 12.3105 21.6499 12 21.6499ZM7.56055 3.8501C4.91016 3.8501 2.75 6.02002 2.75 8.68994C2.75 15.52 9.32031 19.3203 11.6309 20.1099C11.8105 20.1699 12.1992 20.1699 12.3809 20.1099C14.6797 19.3203 21.2598 15.5303 21.2598 8.68994C21.2598 6.02002 19.0996 3.8501 16.4492 3.8501C14.9297 3.8501 13.5195 4.56006 12.6094 5.79004C12.3301 6.16992 11.6895 6.16992 11.4102 5.79004C10.4805 4.55029 9.08008 3.8501 7.56055 3.8501Z"
-                                            fill="#292D32" fill-opacity="1.000000" fill-rule="nonzero" />
-                                        <g opacity="0.000000" />
+                                    <svg  viewBox="0 0 22 20" fill="none"  xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M10.75 19.3C10.44 19.3 10.14 19.26 9.89 19.17C6.07 17.86 0 13.21 0 6.34C0 2.84 2.83 0 6.31 0C8 0 9.58 0.66 10.75 1.84C11.92 0.66 13.5 0 15.19 0C18.67 0 21.5 2.85 21.5 6.34C21.5 13.22 15.43 17.86 11.61 19.17C11.36 19.26 11.06 19.3 10.75 19.3ZM6.31 1.5C3.66 1.5 1.5 3.67 1.5 6.34C1.5 13.17 8.07 16.97 10.38 17.76C10.56 17.82 10.95 17.82 11.13 17.76C13.43 16.97 20.01 13.18 20.01 6.34C20.01 3.67 17.85 1.5 15.2 1.5C13.68 1.5 12.27 2.21 11.36 3.44C11.08 3.82 10.44 3.82 10.16 3.44C9.23 2.2 7.83 1.5 6.31 1.5Z" fill="#292D32"/>
+                                        <path class="color-like" d="M8.5 1.5L11 3L12 1.5L15.5 1L18.5 2L20.5 5.5V8.5L19 12L15 16.5L11 18.5L8.5 18L4 14.5L2 10.5L1 6.5V5L2 3L4 1.5L6.5 1L8.5 1.5Z"  fill=""/>
                                     </svg>
+                                        
+                                        
                                 </button>
                             </div>
                         </div>
@@ -50,13 +49,16 @@
                                     <div class="card__swiper-slide-padding"><span>Ожидается поступление в июне</span></div>
                                 </div>
                                 <button class="card__swiper-slide-like">
-                                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                                        xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <path id="Vector"
-                                            d="M12 21.6499C11.6895 21.6499 11.3906 21.6099 11.1406 21.52C7.32031 20.21 1.25 15.5601 1.25 8.68994C1.25 5.18994 4.08008 2.3501 7.56055 2.3501C9.25 2.3501 10.8301 3.01025 12 4.18994C13.1699 3.01025 14.75 2.3501 16.4395 2.3501C19.9199 2.3501 22.75 5.2002 22.75 8.68994C22.75 15.5703 16.6797 20.21 12.8594 21.52C12.6094 21.6099 12.3105 21.6499 12 21.6499ZM7.56055 3.8501C4.91016 3.8501 2.75 6.02002 2.75 8.68994C2.75 15.52 9.32031 19.3203 11.6309 20.1099C11.8105 20.1699 12.1992 20.1699 12.3809 20.1099C14.6797 19.3203 21.2598 15.5303 21.2598 8.68994C21.2598 6.02002 19.0996 3.8501 16.4492 3.8501C14.9297 3.8501 13.5195 4.56006 12.6094 5.79004C12.3301 6.16992 11.6895 6.16992 11.4102 5.79004C10.4805 4.55029 9.08008 3.8501 7.56055 3.8501Z"
-                                            fill="#292D32" fill-opacity="1.000000" fill-rule="nonzero" />
-                                        <g opacity="0.000000" />
+                                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M17.4545 2C15.1636 2 13.1716 3.00731 12 4.69539C10.8284 3.00731 8.83636 2 6.54545 2C4.81011 2.00197 3.14642 2.67501 1.91935 3.87146C0.692279 5.06792 0.00202103 6.6901 0 8.38214C0 11.4881 1.98545 14.7207 5.90182 17.9883C7.69642 19.4794 9.63492 20.7974 11.6902 21.924C11.7854 21.9739 11.8919 22 12 22C12.1081 22 12.2146 21.9739 12.3098 21.924C14.3651 20.7974 16.3036 19.4794 18.0982 17.9883C22.0145 14.7207 24 11.4881 24 8.38214C23.998 6.6901 23.3077 5.06792 22.0806 3.87146C20.8536 2.67501 19.1899 2.00197 17.4545 2ZM12 20.6263C10.2098 19.619 1.30909 14.309 1.30909 8.38214C1.31053 7.02845 1.86269 5.73061 2.84438 4.77341C3.82608 3.81621 5.15713 3.27784 6.54545 3.27643C8.75782 3.27643 10.6156 4.4284 11.3945 6.28348C11.4439 6.40053 11.5277 6.50065 11.6356 6.57111C11.7434 6.64157 11.8702 6.67919 12 6.67919C12.1298 6.67919 12.2566 6.64157 12.3644 6.57111C12.4723 6.50065 12.5561 6.40053 12.6055 6.28348C13.3844 4.4284 15.2422 3.27643 17.4545 3.27643C18.8429 3.27784 20.1739 3.81621 21.1556 4.77341C22.1373 5.73061 22.6895 7.02845 22.6909 8.38214C22.6909 14.309 13.7902 19.619 12 20.6263Z"
+                                        />
+                                        <path
+                                            class="model__like-heat"
+                                            d="M24 8.45986C24 15.7532 12.8796 21.6567 12.4061 21.9005C12.2813 21.9658 12.1417 22 12 22C11.8583 22 11.7187 21.9658 11.5939 21.9005C11.1204 21.6567 0 15.7532 0 8.45986C0.00198508 6.74719 0.702493 5.10522 1.94784 3.89418C3.19319 2.68314 4.88167 2.00193 6.64286 2C8.85536 2 10.7925 2.92522 12 4.48913C13.2075 2.92522 15.1446 2 17.3571 2C19.1183 2.00193 20.8068 2.68314 22.0522 3.89418C23.2975 5.10522 23.998 6.74719 24 8.45986Z"
+                                        />
                                     </svg>
+                                 
                                 </button>
                             </div>
                         </div>
