--- a/src/components/_favorites.html
+++ b/src/components/_favorites.html
@@ -41,7 +41,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -133,7 +134,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -225,7 +227,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -317,7 +320,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -409,7 +413,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -501,7 +506,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -593,7 +599,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -685,7 +692,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -777,7 +785,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
