--- a/src/components/_products.html
+++ b/src/components/_products.html
@@ -70,7 +70,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -176,7 +177,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -282,7 +284,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
@@ -388,7 +391,8 @@
                             </button>
                         </div>
 
-                        <button class="recommendations__card-button btn__card">
+                        <button type="button"
+class="recommendations__card-button btn__card">
                             <span> В корзину </span>
 
                             <svg
