--- a/src/components/_recommendations.html
+++ b/src/components/_recommendations.html
@@ -128,7 +128,8 @@
                 </button>
               </div>
 
-              <button class="recommendations__card-button btn__card">
+              <button type="button"
+class="recommendations__card-button btn__card">
                 <span> В корзину </span>
 
                 <svg
@@ -305,7 +306,8 @@
                 </button>
               </div>
 
-              <button class="recommendations__card-button btn__card">
+              <button type="button"
+class="recommendations__card-button btn__card">
                 <span> В корзину </span>
 
                 <svg
@@ -482,7 +484,8 @@
                 </button>
               </div>
 
-              <button class="recommendations__card-button btn__card">
+              <button type="button"
+class="recommendations__card-button btn__card">
                 <span> В корзину </span>
 
                 <svg
@@ -659,7 +662,8 @@
                 </button>
               </div>
 
-              <button class="recommendations__card-button btn__card">
+              <button type="button"
+class="recommendations__card-button btn__card">
                 <span> В корзину </span>
 
                 <svg
@@ -836,7 +840,8 @@
                 </button>
               </div>
 
-              <button class="recommendations__card-button btn__card">
+              <button type="button"
+class="recommendations__card-button btn__card">
                 <span> В корзину </span>
 
                 <svg
