--- a/src/components/_popular-products.html
+++ b/src/components/_popular-products.html
@@ -102,7 +102,8 @@
                                 </button>
                             </div>
 
-                            <button class="recommendations__card-button btn__card">
+                            <button type="button"
+class="recommendations__card-button btn__card">
                                 <span> В корзину </span>
 
                                 <svg
@@ -175,7 +176,8 @@
                                 </button>
                             </div>
 
-                            <button class="recommendations__card-button btn__card">
+                            <button type="button"
+class="recommendations__card-button btn__card">
                                 <span> В корзину </span>
 
                                 <svg
@@ -248,7 +250,8 @@
                                 </button>
                             </div>
 
-                            <button class="recommendations__card-button btn__card">
+                            <button type="button"
+class="recommendations__card-button btn__card">
                                 <span> В корзину </span>
 
                                 <svg
@@ -321,7 +324,8 @@
                                 </button>
                             </div>
 
-                            <button class="recommendations__card-button btn__card">
+                            <button type="button"
+class="recommendations__card-button btn__card">
                                 <span> В корзину </span>
 
                                 <svg
@@ -394,7 +398,8 @@
                                 </button>
                             </div>
 
-                            <button class="recommendations__card-button btn__card">
+                            <button type="button"
+class="recommendations__card-button btn__card">
                                 <span> В корзину </span>
 
                                 <svg
