--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -1053,7 +1053,7 @@
     // .header-catalog__item-list
     &__item-list {
         position: absolute;
-        left: 50.1rem;
+        left: 27%;
         top: 6rem;
         width: 128.8rem;
         padding-left: 19.6rem;
